examples/test/testpolicy13386.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13386
  namespace: namespace362
spec:
  podSelector:
    matchLabels:
      key10: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value33
          key48: value34
          key4: value27
      podSelector:
        matchLabels:
          key18: value13
          key3: value34
          key30: value26
